@@ -1,5 +1,14 @@
 2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/pcreshell.cc (Pattern::Pattern): Let's be paranoid and
+	use g_new0() rather than plain g_new() to allocate ovector_.
+	(Pattern::get_substring_bounds): More paranoia: assert that
+	the index argument is within the allowed range.
+	(Pattern::get_substring): Call get_substring_bounds() to get the
+	boundary offsets in order to take advantage of the error checking.
+
+2004-05-28  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/stringutils.cc (convert_to_ascii): Replace non-ASCII
 	characters by octal escapes rather than just a question mark.
 
